tests/data-clumps/test-cases/parameter-field/simple/positive/java/test.config.ts
import type { ScenarioConfig } from '@/scenarioUtils';

const config = {
  "name": "Java parameter-field data clump between service and patient",
  "language": "java",
  "sourceDir": "source",
  "expectedReportFile": "report-expected.json",
  "detectorOptions": {}
} satisfies ScenarioConfig;

export default config;
